<resources>
    <string name="app_name">AndroidApp</string>
    <string name="text_view_label">Text View</string>
    <string name="read_full">Read full</string>
    <string name="long_text">Available in Android 9 (API level 28) and higher, the magnifier widget is a virtual magnifying glass that displays an enlarged copy of a chosen View through an overlay pane that represents the lens. The feature improves the text insertion and selection user experience: when applying the magnifier to text, a user can precisely position the cursor or the selection handles by viewing the magnified text in a pane that follows their finger. Figure 1 below showcases the way the magnifier facilitates selecting text. The magnifier APIs are not tied to text, and this widget can be used in a variety of use cases, such as reading small type or enlarging hard-to-see place names on maps.</string>
    <string name="textview_monospace_font">textview monospace font</string>
    <string name="textview_casual_font">textview casual font</string>
    <string name="textmediumblack_style">TextMediumBlack Style</string>
    <string name="textbigblack_style">TextBigBlack Style</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="has_not_focus">EditText has not focus</string>
    <string name="has_focus">EditText has focus</string>
    <string name="button_with_icon">Button with icon</string>
    <string name="button_with_drawable">button with drawable</string>
    <string name="buttons_text">Buttons</string>
    <string name="click_button">Button Pressed</string>
    <string name="app_bar">App-bar</string>
    <string name="like">Like</string>
    <string name="search">Search</string>
    <string name="setting_menu">Setting menu</string>
    <string name="like_menu">Like menu</string>
    <string name="unlike">Unlike</string>
    <string name="adapterview">AdapterView</string>
    <string name="settings">Settings</string>
    <string name="collapsing_toolbar_layout_text">CollapsingToolbarLayout</string>
    <string name="toolbar">ToolBar</string>
    <string name="spinner">Spinner</string>
    <string name="select_image_from_camera">Select image from camera</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string-array name="cities_array">
        <item>Москва</item>
        <item>Волгоград</item>
        <item>Элиста</item>
        <item>Лондон</item>
        <item>Варшава</item>
        <item>Берлин</item>
        <item>Париж</item>
        <item>Токио</item>
        <item>Киото</item>
        <item>Омск</item>
        <item>Тамбов</item>
        <item>Казань</item>
    </string-array>

    <string-array name="countries_array">
        <item>Россия</item>
        <item>Англия</item>
        <item>Польша</item>
        <item>Германия</item>
        <item>Франция</item>
        <item>Япония</item>

    </string-array>


</resources>