<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fg_ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/fg_btn_text_view_fragment"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding8"
        android:layout_marginTop="@dimen/padding20"
        android:text="@string/text_view_label" />

    <Button
        android:id="@+id/fg_btn_edit_text"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="EditText" />

    <Button
        android:id="@+id/fg_btn_button"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="Button" />

    <Button
        android:id="@+id/fg_btn_app_bar"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_bar" />

    <Button
        android:id="@+id/fg_btn_toolbar"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/toolbar" />

    <Button
        android:id="@+id/fg_btn_spinner"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/spinner" />

    <Button
        android:id="@+id/fg_btn_adapter_view"
        style="@style/AAButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/adapterview" />

</LinearLayout>