<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fet_ll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fet_tb_toolbar"
        style="@style/SupperAppToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:hintTextAppearance="@style/SuperAppTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fet_tiet_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login"
                    android:inputType="textVisiblePassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fet_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintTextAppearance="@style/SuperAppTextInputLayout"
                app:passwordToggleContentDescription="description"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fet_tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                style="@style/AAButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_tv"
                    style="@style/TextBigGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/password_tv"
                    style="@style/TextBigGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_tv" />

                <TextView
                    android:id="@+id/login_text"
                    style="@style/TextBigBlack"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    tools:text="qwertyqw"
                    app:layout_constraintLeft_toRightOf="@id/login_tv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_password"
                    style="@style/TextBigBlack"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    tools:text="1234"
                    app:layout_constraintLeft_toRightOf="@id/password_tv"
                    app:layout_constraintTop_toBottomOf="@id/login_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBigBlack"
                android:text="EditText"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/input_ed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:background="@drawable/selector_et_background"/>

            <TextView
                android:id="@+id/et_result"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                style="@style/TextBigBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/focus_tv"
                android:layout_marginTop="16dp"
                style="@style/TextBigBlack"
                android:text="@string/has_not_focus"/>


        </LinearLayout>


    </ScrollView>


</LinearLayout>